add in toggle view and design elements

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,27 @@ a{
     text-decoration: none;
     color: black;
 }
+.resultTitle{
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 5px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+}
+.active, .resultTitle:hover{
+    background-color: #ccc;
+}
+.userManagement{
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;  
+}
+
 .warning{
     color:red;
 }
