--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ a{
     outline: none;
     font-size: 15px;
 }
-.active, .user_resultTitle:hover{
+.active, .user_resultUser:hover{
     background-color: #ccc;
 }
 .user_userManagement{
